# playwright_mcp_server

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  server.py  server_playwright.py  server_sse.py
