[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-playwright-server"
version = "1.0.0"
description = "MCP Server for Playwright automation"
authors = [
    {name = "Samuel", email = "your-email@example.com"}
]
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.40.0"
]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
mcp-playwright-server = "server:main"